<resources>
    <!--<string name="app_name">Pak Studies NTS</string>-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">MCQs Testing Learning</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scroll_fragment">scroll fragment</string>
    <string name="quiz_type">Quiz Mode</string>
    <string name="settings">Settings</string>
    <string name="no_time_mode">No Time Mode</string>
    <string name="quiz_ctg">Quiz Categories</string>
    <string name="prf_settings">Profile Settings</string>
    <string name="quiz_report">Quiz Report</string>
    <string name="quiz_favourite">Quiz Favourite</string>
    <string name="please_wait">Please Wait...</string>
    <string name="no_record_found">No Record Found</string>
    <string name="quiz_category_list">Quiz Category List</string>
    <string name="time_mode">Time Mode</string>
    <string name="beat_the_time_mode">Beat The Time Mode</string>
    <string name="preparation_mode">Preparation Mode</string>
    <string name="challenge_mode">Challenge Mode</string>
    <string name="prev">Prev</string>
    <string name="next">next</string>
    <string name="exit">Close</string>
</resources>